--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.rst"
 requires-python = ">=3.13"
 dependencies = [
     "ipython>=9.3.0",
+    "pre-commit>=4.4.0",
     "sphinx>=8.2.3",
 ]
 
